﻿<h3>Blog 4.5.0</h3>
<p class="Contributor">
	DotNetNuke&reg; <br />
	<a href="mailto:support@dotnetnuke.com">support@dotnetnuke.com</a><br />
	<a href=http://www.dotnetnuke.com>http://www.dotnetnuke.com</a><br />
</p>
<hr/>
<div class="License">
	<h3>About the Core Blog</h3>
	<p class="Owner">
		<strong>Version 5.0.0</strong><br /><br />
		This version of the module requires DotNetNuke Core 6.2 Beta 1 or greater and is Beta. <br /><br />
		FYI: Developers should be aware that the module uses Visual Studio 2010 only. <br /><br />
		Category & Tag migration (for upgrades) is not handled at this time (will be before a final release). <br /><br />
		<ul>
			<li>Corrected blog comment sorting problem.</li>
			<li>20228 - Integrated with the core Journal API.</li>
			<li>20789, 21988 - wired in fix submitted by J Sheely around blank author names.</li>
			<li>20210 - Updated manifest to 5.0 format (from 3.0).</li>
			<li>Automated packaging and made project structure more inline with other DotNetNuke modules and projects.</li>
			<li>Converted module to use DNN 6 form pattern (also removed h1, h2 and font-family styling from module.css).</li>
			<li>Changed all jQuery registration to use proper core methods (now loads jQuery UI too).</li>
			<li>Offloaded most script and css loading to Client Dependency Framework.</li>
			<li>20211 - Integrated core taxonomy & folksonomy (NOT DONE: migrated previous categories/tags over).</li>
			<li>Implemented tagging controls and styling form Q&A module.</li>
			<li>19321 - Updated Page Meta information in several views, so the title, description and keywords associated with the 'page' are much more accurate than before (before, we used core page info).</li>
			<li>Added Open Graph Protocol Support to several views.</li>
			<li>Made comment time stamps use friendly date format (x hours/days ago).</li>
			<li>20935 - Corrected column drop bug seen in upgrades to 4.1.0.</li>
			<li>Updated CookComputing.XmlRpcV2.dll</li>
		</ul>
</div>